--- a/docs/notes/markdown.mdx
+++ b/docs/notes/markdown.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_position: 1
 ---
-# Markdown Lang
+# Markdown 
 
 - markdown link creation using [link text](link-address)
   - links can be external urls and internal urls or file paths
