--- a/docs/notes/markdown.mdx
+++ b/docs/notes/markdown.mdx
@@ -3,7 +3,7 @@ sidebar_position: 1
 ---
 # Markdown 
 
-- markdown link creation using [link text](link-address)
+- markdown link creation using `[link text](link address)`
   - links can be external urls and internal urls or file paths
 - font size follows follow # hierarchy
 - ** **bolds text**
